--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,6 @@
 pipeline:
-  image: golang
-  commands:
-    - go build
-    - go test
+  exec_test:
+    image: golang
+    commands:
+      - go build
+      - go test
